Creating login page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://res.cloudinary.com/sagartest/image/upload/v1770925067/Cineflix-GPT/78a97c3b-55b2-4bb4-ac5f-4857dd2e7dda_kenb5v.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>cineflix-gpt</title>
   </head>
